feat(room): room Management and feat fe layout